@@ -70,16 +70,31 @@ public interface ColumnFamilyStoreMBean
     public void setMaximumCompactionThreshold(int threshold);
 
     /**
-     * Sets the compaction strategy by class name
-     * @param className the name of the compaction strategy class
+     * Sets the compaction strategy locally for this node
+     *
+     * Note that this will be set until an ALTER with compaction = {..} is executed or the node is restarted
+     *
+     * @param options compaction options with the same syntax as when doing ALTER ... WITH compaction = {..}
      */
-    public void setCompactionStrategyClass(String className);
+    public void setLocalCompactionStrategyString(String options);
+    public String getLocalCompactionStrategyString();
 
     /**
-     * Gets the compaction strategy class name
+     * Sets the compaction strategy locally for this node
+     *
+     * Note that this will be set until an ALTER with compaction = {..} is executed or the node is restarted
+     *
+     * @param options compaction options map
      */
-    public String getCompactionStrategyClass();
+    public void setLocalCompactionStrategy(Map<String, String> options);
+    public Map<String, String> getLocalCompactionStrategy();
 
+    /**
+     * Get the globally configured compaction strategy
+     *
+     * Note that this can be overridden by setLocalCompactionStrategy(...)
+     */
+    public Map<String, String> getCompactionStrategy();
     /**
      * Get the compression parameters
      */
